Sun Feb  9 12:58:59 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* diff.c (diff_usage): Document --ifdef and try to briefly say
	what "rcsdiff-options" means.

	* update.c (update): If update had a nonzero status and we haven't
	yet tried to fetch unpatchable files, go ahead and try it again.
	The previous behavior was to quit, which meant that updates would
	keep failing until you hacked around the problem.  Patch and bug
	report by Ian; comment, ChangeLog entry, and willingness to take
	the flak if checking it is premature by Jim.

	* server.c (alloc_pending): New function.
	* server.c: Call it.  Fixes places where we had neglected to
	check for NULL return from malloc.

	* sanity.sh (binwrap): Add test binwrap-0, tests for import.c fix
	below.

Sun, 9 Feb 1997 (submitted 19 Jul 1996)  John Polstra  <jdp@polstra.com>

	* import.c (import): Give error if the same tag is specified more
	than once.  The previous behavior was to write an RCS file which
	had the same tag listed twice, once pointing to each revision,
	which is not legal.

Sun Feb  9 12:37:09 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* checkin.c (Checkin): Use cvs_output to print message (should
	make out of order bugs no worse, as it merely substitues a
	protocol_pipe vs. stderr_pipe race instead of a stdout_pipe
	vs. stderr_pipe race).  Add comment about stdout vs. stderr.

Fri Feb  7 08:29:52 1997  Josef Nelissen  <josef.nelissen@munich.ixos.de>

	* server.c (check_command_legal_p): Don't use ANSI-style definition.

Thu Feb  6 10:55:37 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* patch.c (patch): Give a fatal error for -V option (see comment
	for rationale).

	* diff.c (diff): Also send "options" to server.  Pretty much the
	patch submitted independently by josef.nelissen@munich.ixos.de and
	Ronald Khoo <ronald@demon.net>.

Wed Feb  5 18:57:14 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* modules.c (do_module): Fix typo in 30 Jan 97 PATH_MAX nuking